# starter-kit-2025

./: .dockerignore  .env.example  .envrc  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  README.md  STARTER.md  alembic.ini  lefthook.yml  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml
alembic/: env.py
alembic/versions/: 2000_01_01_0000_create_tests_table.py  2000_01_02_0000_create_better_auth_users_table.py  2000_01_02_0000_create_users_table.py  2025_06_11_2327_create_tests_table.py  2025_06_26_2214_create_users_table.py
app/: layout.tsx  page.tsx
app/(auth)/email-verified/: page.tsx
app/(auth)/forgot-password/: page.tsx
app/(auth)/reset-password/: page.tsx
app/(auth)/sign-in/: page.tsx
app/(auth)/sign-up/: page.tsx
app/(main)/admin/: page.tsx
app/(main)/app/: page.tsx
app/api/email/: route.ts
app/metrics/: MicrosoftClarity.tsx
components/: auth-buttons.tsx  language-selector.tsx  loading-button.tsx  signout-button.tsx
components/admin/: impersonate-user.tsx  users-table.tsx
components/ui/: alert-dialog.tsx
i18n/: request.ts
i18n/messages/: en.json  ko.json
lib/: auth-client.ts  auth.ts  email.ts  middleware.ts  prisma.ts  use-alert.tsx  zod.ts
ops/: Dockerfile.nextjs  Dockerfile.python  compose.build.yaml  compose.yaml
prisma/: schema.prisma
src/fastapi/: main.py
src/jobs/: job_word_counter.py
src/services/: show_tests.py
src/utils/: prisma.py  redis.py  rq.py
tests/: 01-auth-basic.spec.ts  01-auth-signup.spec.ts  02-auth-signin.spec.ts  utils.ts
(+2 files in other folders)
