[project]
name = "starter-kit-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Julia Kang",email = "julia7hk@gmail.com"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "alembic (>=1.16.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
