[project]
name = "starter-kit-2025"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "prisma @ git+https://github.com/mike3dk/prisma-client-py.git@v0.16.1"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
