[project]
name = "starter-kit-2025"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "prisma @ git+https://github.com/mike3dk/prisma-client-py.git@v0.16.2",
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "rq (>=2.4.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
